--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -1,103 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:backgroundTint="#FFFFFF"
+    android:foregroundTint="#FFFFFF"
+    android:background="#FFFFFF">
 
-    <!-- AppBarLayout with CollapsingToolbarLayout -->
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <!-- CollapsingToolbarLayout to hold ImageView and TabLayout -->
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="223dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <!-- ImageView inside CollapsingToolbarLayout -->
             <ImageView
                 android:id="@+id/iv_recipe_image"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="match_parent"
+                android:backgroundTint="#FFFFFF"
                 android:contentDescription="@null"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
 
-            <!-- Small clickable ImageView in the top-right corner -->
-            <ImageView
-                android:id="@+id/iv_meal_planner"
-                android:layout_width="49dp"
-                android:layout_height="30dp"
-                android:layout_gravity="end|top"
-                android:layout_margin="60dp"
-                android:contentDescription="@null"
-                android:onClick="openMealPlanner"
-                android:src="@drawable/container_group" />
-
-            <!-- HorizontalScrollView to wrap TabLayout for horizontal scrolling -->
-            <HorizontalScrollView
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fillViewport="true"
-                android:scrollbars="none">
+                android:layout_height="66dp">
 
-                <!-- TabLayout with increased width inside HorizontalScrollView -->
-                <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/tab_layout"
-                    android:layout_width="1500dp"
-                    android:layout_height="wrap_content"
-                    app:tabMode="scrollable"
-                    app:layout_collapseMode="pin" />
-            </HorizontalScrollView>
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="66dp"
+                    android:layout_gravity="center"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    app:srcCompat="@drawable/iv_home_page_rectangle4" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:id="@+id/textView13"
+                        android:layout_width="300dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text=""
+                        android:textAlignment="center"
+                        android:textColor="@android:color/black"
+                        android:textSize="25sp"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:id="@+id/iv_meal_planner"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_gravity="center_vertical"
+                        android:contentDescription="@null"
+                        android:onClick="openMealPlanner"
+                        android:src="@drawable/container_group"
+                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+                </LinearLayout>
+
+            </FrameLayout>
+
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <!-- Layout for the scrollable content that overlaps the image slightly -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/scrollable_container"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/img_shopping_list1"
+        android:layout_width="393dp"
+        android:layout_height="451dp"
+        android:layout_marginTop="236dp"
+        android:layout_marginBottom="100dp"
+        android:background="#FFFFFF"
+        android:backgroundTint="#FFFFFF"
         android:elevation="8dp"
-        app:layout_constraintTop_toBottomOf="@id/app_bar"
-        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+        android:foregroundTint="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="-14dp">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <!-- ViewPager2 for the fragments inside -->
+        <HorizontalScrollView
+            android:id="@+id/horizontalScrollView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fillViewport="true"
+            android:scrollbars="none"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tab_layout"
+                android:layout_width="1500dp"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#FFFFFF"
+                app:layout_collapseMode="pin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tabMode="scrollable"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+        </HorizontalScrollView>
+
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/view_pager"
-            android:layout_width="350dp"
-            android:layout_height="375dp"
+            android:layout_width="370dp"
+            android:layout_height="359dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="76dp"
             android:background="@drawable/image_view_rectanglesignup"
             android:clipToPadding="false"
             android:padding="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- Bottom Navigation -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+
+        android:background="#FFFFFF"
         app:labelVisibilityMode="unlabeled"
-        app:menu="@menu/bottom_nav"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:menu="@menu/bottom_nav" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
