--- a/app/src/main/res/layout/activity_shopping_list_page.xml
+++ b/app/src/main/res/layout/activity_shopping_list_page.xml
@@ -63,8 +63,8 @@
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView_shopping_list"
-        android:layout_width="403dp"
-        android:layout_height="552dp"
+        android:layout_width="407dp"
+        android:layout_height="525dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,18 +86,19 @@
             android:showDividers="middle" />
     </androidx.core.widget.NestedScrollView>
 
+    <!-- Bottom Navigation -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         app:backgroundTint="#FFFFFF"
         app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:menu="@menu/bottom_nav" />
+
 
     <TextView
         android:id="@+id/txt_shopping_list_title"
