--- a/app/src/main/res/layout/activity_edit_profile_page.xml
+++ b/app/src/main/res/layout/activity_edit_profile_page.xml
@@ -43,17 +43,15 @@
         android:layout_width="162dp"
         android:layout_height="39dp"
         android:layout_marginStart="115dp"
-        android:layout_marginTop="679dp"
+        android:layout_marginTop="615dp"
         android:layout_marginEnd="116dp"
-        android:layout_marginBottom="126dp"
-        android:background="#242760"
+        android:layout_marginBottom="190dp"
+        android:background="#DCD9DC"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtSave"
@@ -61,15 +59,16 @@
         android:layout_height="39dp"
         android:layout_gravity="center"
         android:layout_marginStart="19dp"
-        android:layout_marginTop="679dp"
+        android:layout_marginTop="615dp"
         android:layout_marginEnd="18dp"
-        android:layout_marginBottom="126dp"
+        android:layout_marginBottom="190dp"
         android:gravity="left|center_vertical"
         android:includeFontPadding="false"
         android:maxLines="1"
         android:singleLine="true"
         android:text="Save changes"
-        android:textColor="#FFFFFFFF"
+        android:textColor="#000000"
+        android:textColorHighlight="#000000"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/image_rectangle3"
@@ -206,39 +205,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/text_date_of_birth"
-        android:layout_width="99dp"
-        android:layout_height="18dp"
-        android:layout_gravity="left"
-        android:layout_marginStart="66dp"
-        android:layout_marginTop="585dp"
-        android:gravity="left|center_vertical"
-        android:includeFontPadding="false"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:text="Date of Birth"
-        android:textColor="#FF000000"
-        android:textSize="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imgDownArrow"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="top"
-        android:layout_marginStart="305dp"
-        android:layout_marginTop="594dp"
-        android:layout_marginEnd="58dp"
-        android:layout_marginBottom="220dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/image_arrow_back_ios1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/txtEPName"
         android:layout_width="300dp"
         android:layout_height="50dp"
@@ -279,21 +245,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/txtEPDOB"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="594dp"
-        android:layout_marginEnd="47dp"
-        android:layout_marginBottom="200dp"
-        android:background="@drawable/image_view_rectangle1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
