--- a/app/src/main/res/layout/fragment_ingredients.xml
+++ b/app/src/main/res/layout/fragment_ingredients.xml
@@ -21,8 +21,10 @@
             android:id="@+id/btn_add_to_shopping_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="#DCD9DC"
             android:text="Add to Shopping List"
-            android:layout_marginTop="16dp" />
+            android:textColor="#000000" />
 
     </LinearLayout>
 </ScrollView>
