--- a/app/src/main/res/layout/activity_edit_profile_page.xml
+++ b/app/src/main/res/layout/activity_edit_profile_page.xml
@@ -46,7 +46,7 @@
         android:layout_marginTop="615dp"
         android:layout_marginEnd="116dp"
         android:layout_marginBottom="190dp"
-        android:background="#DCD9DC"
+        android:background="#4CAF50"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,6 +118,7 @@
         android:layout_marginStart="118dp"
         android:layout_marginTop="118dp"
         android:layout_marginEnd="122dp"
+        android:backgroundTintMode="add"
         android:scaleType="centerInside"
         android:src="@drawable/image_camera"
         app:layout_constraintEnd_toEndOf="parent"
